<resources>
 <string name="app_name">SANCUS NETWORK SFA</string>
    <string name="comments">Comments</string>
    <string name="StockUnit">Unit</string>
    <string name="DSR_Profile">DSR Profile</string>
    <string name="selectAtleastOneOption">Please Select atleast one option to proceed.</string>
    <string name="selectAtleastOneOptionwithedittext">Please Specify the reason first to proceed.</string>
    <string name="today_working">Today Working</string>
    <string name="today_Notworking">Not Working</string>
    <string name="select_attendance_scope">View Attendance Report</string>
    <string name="select_attendance_report">DSR Attendance Report</string>
    <string name="selectDistributorProceeds">Please select Distributor to Proceed.</string>
    <string name="dsr_profile">DSR Profile</string>
    <string name="working">Working</string>
    <string name="not_working">Not Working</string>
    <string name="DayStartButtonText">Day Start</string>
    <string name="ExitButtonText">Exit</string>
    <string name="submittingDayStart">Submitting Day Start Details...</string>
    <string name="overdueBal">OverDue Balance</string>
    <string name="strDataLostIfNotSubmitted">The Filled data will be lost if not submitted?</string>
    <string name="outstandingBal">Outstanding Balance</string>
    <string name="AlertDialogHeaderMsg">Alert</string>
    <string name="AlertDialogHeaderErrorMsg">Error</string>
    <string name="AlertDialogOkButton">OK</string>
    <string name="AlertDialogCancelButton">Cancel</string>
    <string name="AlertDialogYesButton">Yes</string>
    <string name="AlertDialogNoButton">No</string>
    <string name="genTermInformation">Information</string>
    <string name="genTermNoDataConnectionFullMsg">Your device has no Data Connection. \n Please ensure Internet is accessible to Continue.</string>
 <string name="BackButConfirm">Have you saved your data before going back?</string>
    <string name="distributorSubmitMessage">Do you want to submit distributors information</string>
    <string name="LocalAreaMessage">Local Area</string>
    <string name="PinCodeMessage">Pin Code</string>
    <string name="CityMessage">City</string>
    <string name="StateMessage">State</string>
   <string name="PleaseSelectDistributor">Please Select Distributor.</string>
   <string name="PleaseFillAddress">Please Fill Address Value.</string>
   <string name="PleaseFillProperAddress">Please fill Proper address.</string>
   <string name="PleaseFillPincode">Please Fill Pincode Value.</string>
   <string name="PleaseFillPincodeAllDigits">Pin Code value cannot be less than 6 digits.</string>
   <string name="PleaseFillCity">Please Fill City Value.</string>
   <string name="PleaseFillState">Please Fill State Value.</string>
 <string name="DayEndBeforeLogout">Please Day End Before Logging Out.</string>
    <string name="genTermNoDataConnection">Information</string>
    <string name="internetError">Internet connection is slow ,please try again.</string>
    <string name="phnRegisterError">This phone is not registered, please contact administrator.</string>
    <string name="phnDateError">Your Phone Date is not correct.Please Correct it.</string>
    <string name="regID">Create Registration ID.</string>
    <string name="errorTxt">Error :</string>
    <string name="errorPlayServices">This device does not support Play services, App will not work normally</string>
     <string name="NewVersionMsg">New Version of this application is available now. \nPlease click on OK to install new Version!</string>
    <string name="UpdatingNewVersionMsg">Updating New Version…</string>
    <string name="routeNoAvail">Routes are not Available for this Phone</string>
    <string name="errorFetchData">Unable to fetch  data, please try again.</string>
    <string name="genTermPleaseWaitNew">Please Wait ...</string>
    <string name="genTermLoadData">Loading Data...</string>
    <string name="txtWelcome">Welcome</string>
    <string name="Coverage_Area">Coverage Area</string>
    <string name="Contact_No">Contact No</string>
    <string name="DOB">DOB</string>
    <string name="txtDayStart">Day Start</string>
    <string name="radioYes">Yes</string>
    <string name="radioNo">No</string>
    <string name="txtUpdate">Update Now</string>
    <string name="txtNotYou">Not You</string>
    <string name="hintMobileNo">Mobile No.</string>
    <string name="txtValidate">Validate</string>
    <string name="txtFName">First Name</string>
    <string name="txtLName">Last Name</string>
    <string name="txtContactNo">Contact No.</string>
    <string name="txtDOB">DOB</string>
    <string name="txtSelectDate">Select Date</string>
    <string name="txtSex">Sex</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="txtMaritalStatus">Marital Status</string>
    <string name="txtMarried">Married</string>
    <string name="txtUnmarried">Unmarried</string>
    <string name="txtMarriedDate">Married Date</string>
    <string name="txtQualification">Qualification</string>
    <string name="txtSelect">Select</string>
    <string name="txtUpdatedphoto">Updated photo</string>
    <string name="txtSelfie">Selfie</string>
    <string name="txtBrowse">Browse</string>
    <string name="txtEmailID">EmailID</string>
    <string name="txtBloodGroup">Blood Group</string>
    <string name="txtSIGNHERE">SIGN HERE</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtclearSign">clear Sign</string>
    <string name="txtsave">save</string>
    <string name="txtProceed">Proceed</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtNoCamera">Sorry, your phone does not have a camera!</string>
    <string name="txtNoFrontCamera">No front facing camera found.</string>
    <string name="txtSuccessfullySaved">Successfully Saved</string>
    <string name="txtSELECTDOB">SELECT DOB</string>
    <string name="txtSelectMarriedDate">Select Married Date</string>
    <string name="txtBloodGroupTitle">Blood-Group</string>
    <string name="txtSubmitData">Do you want to submit data</string>
    <string name="txtErrorNoDataConnection">No Data Connection!</string>
    <string name="txtErrorInternetConnection">Your device has no Data Connection! Please ensure Internet is accessible to Continue.</string>
    <string name="txtErrorMobileNo">Mobile no. is not valid</string>
    <string name="txtSelectDOB">Please select DOB</string>
    <string name="txtValidateFirstName">First Name is empty</string>
    <string name="txtValidateLastName">Last Name is empty</string>
    <string name="txtValidateContactNo">Contact no. is not valid</string>
    <string name="txtValidateSelectSex">Please select Sex</string>
    <string name="txtValidateMaritalStatus">Please select Marital Status</string>
    <string name="txtValidateMarriedDate">Please select Married Date</string>
    <string name="txtValidateQualification">Please select Qualification</string>
    <string name="txtValidateUpdatePhoto">Please Update Photo</string>
    <string name="txtValidateEmailID">EmailID is not valid</string>
    <string name="txtValidateBloodGroup">Please select Blood-Group</string>
    <string name="txtValidateSignature">Please do Signature</string>
    <string name="txtDSRMsg">Please remember to update your personal details today before doing day end activity</string>
    <string name="hintSearchproducts">Search products..</string>
    <string name="txtSwitchCamera">Switch Camera</string>
    <string name="txtCapture">Capture</string>
    <string name="txtSalesPerformanceMaximizer">Sales Performance Maximizer</string>
    <string name="radioTodayRoute">Today Route : </string>
    <string name="radioChooseDifferentRoute">Choose Different Route</string>
    <string name="txtSelectedRoute">Selected Route</string>
    <string name="txtNoRouteAvailable">No Route Available</string>
    <string name="txtGetStores">Get Stores</string>
    <string name="txtNoStoreVisittoday">No Store Visit today</string>
    <string name="txtDistributorStock">Distributor Stock</string>
    <string name="txtUpdateExecution">Update Execution</string>
    <string name="txtErrorPhnDate">Your Phone  Date is not Up to date.Please Correct the Date.</string>
    <string name="AvailableRoutesMsg">Available Routes</string>
    <string name="txtError">Error.....</string>
    <string name="txtErrorRetrievingData">Error while Retrieving Data!\nPlease Retry</string>
    <string name="txtErr">Error</string>
    <string name="txtSelectReason">Please select the reason first.</string>
    <string name="txtEnterReason">Please enter the reason.</string>
    <string name="txtInvoicePending">There is no Invoice Pending</string>
    <string name="txtRetry">Retry</string>
    <string name="txtReason">Reason :</string>
    <string name="NoDataConnectionFullMsg">Your device has no Data Connection. \n Please ensure Internet is accessible to Continue.</string>
    <string name="RetrivingDataMsg">Retrieving Data…</string>
    <string name="SubmittingDataMsg">Submitting Data…</string>
    <string name="ValidatingMsg">Validating User</string>
    <string name="txtIncentive">Incentive</string>
    <string name="txtFetchingReports">Fetching reports</string>
    <string name="txtEarnedpoints">earned points\nRs:100</string>
    <string name="txtIncentiveName">Incentive Name</string>
    <string name="txtSalesTargetValue">Sales Target Value</string>
    <string name="txtSelectStore">Select Store</string>
    <string name="txtManagerName">Manager Name</string>
    <string name="hash">#</string>
    <string name="txtFindNearby">find near by stores</string>
    <string name="txtNextDay">NextDay</string>
    <string name="txtClose">Close</string>
    <string name="txtAddStore">Add Store</string>
    <string name="txtStart">Start</string>
    <string name="txtStoreName">Store Name</string>
    <string name="hintManagerName">Manager Name</string>
    <string name="searchingnearbystores">Searching Nearby Stores</string>
    <string name="genTermProcessingRequest">Processing Request..</string>
    <string name="genTermGPSDisablePleaseEnable">GPS is not enabled. \n Please select all settings on the next page!</string>
    <string name="PleaseConformMsg">Please Confirm</string>
    <string name="genTermDayEndAlert">Are you sure to end your day visit?</string>
    <string name="genTermDayEndAlertWithoutStoreSubmit">Do you really want to End your Day visit? \n All Previous non-submitted orders will be lost!</string>
    <string name="genTermchangeRouteAlert">Do you really want to Change Route? \n All Previous non-submitted orders will be lost!</string>
    <string name="genTermchangeRouteAlertWhenNoStoreisLeftToSubmit">Do you really want to Change Route? \n</string>
    <string name="genTermSelectStoresPendingToCompleteDayEnd">Following Orders are Not Submitted as Yet. Orders Not Selected for Submission now will be permanently lost.</string>
    <string name="genTermSelectStoresPendingToCompleteChangeRoute">Following Non-Submitted Orders will be lost if you change Route without submitting.</string>
    <string name="genTermSubmitSelected">Submit Orders</string>
    <string name="genTermNoStroeSelectedOnSubmit">No Stores Selected. \nPlease select any Store(s) or Cancel!</string>
    <string name="genTermDirectlyChangeRoute">Discard Orders</string>
    <string name="txtOnChangeRouteDayEndCancel">Cancel &amp; Go Back</string>
    <string name="txtReport">Report</string>
    <string name="home">Home</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="DayEnd">Day End</string>
    <string name="RefreshData">Refresh Data</string>
    <string name="ChangeRoute">Change Route</string>
    <string name="TargetVsAchieved">Target Vs Achieved</string>
    <string name="CheckTodayOrder">Check Today Order</string>
    <string name="Execution">Execution</string>
    <string name="AccountCensusBtn">Account Census Report</string>
</resources>