<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
      <ImageView
            android:id="@+id/mainImg"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/banner_rspl"
            android:layout_below="@+id/bardd"
            />
    <Button
        android:id="@+id/butHome"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/home" />
     <Button
            android:id="@+id/mainImg1"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_text_background"
            android:textColor="#000000"
         android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
            android:text="@string/DayEnd"
         android:visibility="gone"/>
         
        
        
        <Button android:id="@+id/butn_refresh_data"
          android:layout_width="220dp"
     android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
         android:textColor="#000000"
     android:text="@string/RefreshData"
	 android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"/>

      <Button
     android:id="@+id/changeRoute"
      android:layout_width="220dp"
     android:layout_height="wrap_content"
       android:background="@drawable/alert_text_background"
         android:textColor="#000000"
        android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
     android:text="@string/ChangeRoute"
   
      />

     <Button
        android:id="@+id/btnSalesSummary"
       android:layout_width="220dp"
     android:layout_height="wrap_content"
       android:background="@drawable/alert_text_background"
         android:textColor="#000000"
        android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
        android:text="@string/txtReport" />

    <Button
        android:id="@+id/btnExecution"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/Execution" />

    <Button
        android:id="@+id/btnTargetVsAchieved"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/TargetVsAchieved" />

    <Button android:id="@+id/butn_Census_report"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:text="@string/AccountCensusBtn"
        android:drawableRight="@drawable/ic_right2"
        android:gravity="left|center_vertical"
        android:textSize="14sp"/>


    <Button
        android:id="@+id/btnewAddedStore"
       android:layout_width="220dp"
     android:layout_height="wrap_content"
       android:background="@drawable/alert_text_background"
         android:textColor="#000000"
        android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
           android:visibility="gone"
        android:text="View New Added Store" />
      <Button
        android:id="@+id/btnVersion"
       android:layout_width="220dp"
     android:layout_height="wrap_content"
       android:background="@drawable/alert_text_background"
         android:textColor="#000000"
        android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
        android:text="" />
      
       <Button
        android:id="@+id/btnCheckTodayOrder"
       android:layout_width="220dp"
     android:layout_height="wrap_content"
       android:background="@drawable/alert_text_background"
         android:textColor="#000000"
        android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
        android:text="@string/CheckTodayOrder" />

    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/ChangeLanguage" />
    

</LinearLayout>
</ScrollView>